overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,11 @@
   padding:0px;
   margin: 0px;
   box-sizing: border-box;
+  /* overflow: hidden; */
+}
+html{
   overflow: hidden;
 }
-
 body{
   font-family: 'PT Sans', sans-serif;
   position: relative;
@@ -22,8 +24,9 @@ body{
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  overflow: hidden;
+  overflow-x: hidden !important;
   width: 100vw;
+  max-width: 100vw;
 
 }
 
@@ -38,6 +41,7 @@ body{
   align-items: center;
   justify-content: flex-end;
   padding: 20px;
+  overflow: hidden;
 }
 .navbar button{
   background-color: transparent;
@@ -46,10 +50,12 @@ body{
   outline: none;
   cursor: pointer;
   max-height: 30px;
+  overflow: hidden;
 }
 .navbar button img{
   object-fit: contain !important;
   max-height: 30px;
+  overflow: hidden;
 }
 
 /* sidebar */
@@ -64,25 +70,30 @@ body{
   right: -100%;
   width: 280px;
   transition: all 0.3s linear;
+  overflow: hidden;
 }
 .sidebar.show-sidebar{
   /* transform: translateX(-250px) !important; */
   right: 0%;
+  overflow: hidden;
 }
 .sidebar.hide-sidebar{
   /* transform: translateX(250px) !important; */
   right:-100%;
+  overflow: hidden;
 }
 .sidebar > div{
   padding: 10px;
   min-height: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 .sidebar-tab{
   padding: 10px;
   margin-bottom: 5px;
   background-color: #003B87;
+  overflow: hidden;
 }
 
 .overlay{
@@ -95,7 +106,7 @@ body{
   top: 0;
   left: 0;
   right: 0;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .userinfo{
@@ -108,6 +119,7 @@ body{
 }
 .userinfo>img{
   width:30px;
+  overflow: hidden;
 }
 
 .login-btn{
@@ -121,6 +133,7 @@ body{
   border-radius: 20px;
   font-size: 20px;
   font-weight: bold;
+  overflow: hidden;
 }
 
 .logout{
@@ -137,19 +150,29 @@ body{
   outline: none;
   border: none;
   cursor: pointer;
-  
+  overflow: hidden;
 }
 
 /* slider */
 .poster-container{
   width: 100vw;
   object-fit: contain;
+overflow-x: hidden;
 }
+
 .poster-container img{
   width:100%;
   object-fit: contain;
+  overflow-x: hidden;
 }
-
+/* .slick-slider{
+  overflow-x: hidden;
+  overflow-y: unset;
+}
+.slick-slider div{
+  overflow-x: hidden;
+    overflow-y: unset;
+} */
 .slick-dots li button::before{
   font-size:15px;
   color:#003B87;
@@ -170,12 +193,14 @@ body{
   background-position:center;
   background-repeat: no-repeat;
   /* font-family: 'PT Sans', sans-serif; */
+  overflow: hidden;
 }
 .product-section > h3 {
   font-size: 64px;
   color:var(--blue);
   text-align: center;
   font-size: 20px;
+  overflow: hidden;
 }
 
 .product-card{
@@ -193,17 +218,19 @@ body{
   padding: 10px;
   position: relative;
   background-color: white;
-  
+  overflow: hidden;
 }
 .product-title{
   font-weight: 700;
     font-size: 30px;
     /* line-height: 59px; */
+    overflow: hidden;
 }
 .product-price{
 font-weight: 700;
   font-size: 35px;
   color: #FF0000;
+  overflow: hidden;
 }
 
 .product-compare-price{
@@ -282,6 +309,7 @@ left:0;
   background-image: url("./assets/white-concrete-wall\ 1.png");
   padding: 20px;
   z-index:999999;
+  overflow: hidden;
 }
 
 input[type="text"]{
@@ -330,13 +358,14 @@ button:disabled{
   color: white;
   background-color: black;
   width: 100vw;
+  max-width: 100vw;
   height: 50px;
   position: fixed;
   bottom: 0;
   left: 0;
   display: flex;
   align-items: center;
-  overflow:hidden;
+  overflow:hidden !important;
   /* padding: 0 10px; */
   z-index: 999;
   margin-top: 0px;
@@ -352,18 +381,19 @@ button:disabled{
   max-height: 25px;
   white-space: nowrap;
 animation: scrolling-text 15s linear infinite;
+overflow: hidden;
 
 }
 
 @keyframes scrolling-text {
   from {
     transform: translateX(100%);
-    
+    overflow: hidden;
   }
 
   to {
     transform: translateX(-100%);
-    
+    overflow: hidden;
   }
 }
 @keyframes sidebar-anim {
